Fix Reset button spacing

--- a/app/static/css/_table.scss
+++ b/app/static/css/_table.scss
@@ -150,6 +150,10 @@ button[name=toggle] {
     border-radius: .25rem !important;
 }
 
+.export.btn-group {
+    margin-left: 5px !important;
+}
+
 .fixed-table-body {
     border: 1px solid #dee2e6;
     border-radius: 10px;
@@ -186,7 +190,6 @@ div.hidden {
 
 .fixed-table-body {
     overflow: scroll;
-
 }
 
 .fixed-table-container {
@@ -266,7 +269,7 @@ section {
     }
 }
 
-@media all and (max-width: 761px) {
+@media all and (max-width: 763px) {
     #summary {
         font-size: 1rem;
         margin-top: 0vw;
@@ -275,9 +278,12 @@ section {
     .bootstrap-table.bootstrap4 {
         padding-top: 10px;
     }
-}
 
-@media all and (max-width: 618px) {
+
+// }
+
+// @media all and (max-width: 618px) {
+
     .float-right.search.btn-group {
         width: 100%;
     }
